erDiagram
    USERS ||--o{ ORGANIZATION_USERS : pertenece
    ORGANIZATIONS ||--o{ ORGANIZATION_USERS : tiene
    ORGANIZATIONS ||--o{ BRANDS : posee
    BRANDS ||--o{ SOCIAL_CONNECTIONS : conecta
    BRANDS ||--o{ CONTENT_ITEMS : crea
    CONTENT_ITEMS ||--o{ POST_VARIANTS : genera
    POST_VARIANTS ||--o{ PUBLICATION_TARGETS : publica_en
    PUBLICATION_TARGETS ||--o{ PUBLICATION_ATTEMPTS : intenta
    ORGANIZATIONS ||--o{ SUBSCRIPTIONS : contrata
    PLANS ||--o{ SUBSCRIPTIONS : define
    PLANS ||--o{ PLAN_ENTITLEMENTS : incluye
    ENTITLEMENTS ||--o{ PLAN_ENTITLEMENTS : limita
    ORGANIZATIONS ||--o{ AI_USAGE : consume
    BRANDS ||--o{ ACCOUNT_METRIC_SNAPSHOTS : mide
    POST_VARIANTS ||--o{ POST_METRIC_SNAPSHOTS : mide
    ORGANIZATIONS ||--o{ AUDIT_LOGS : audita
